fix/ change size of module png and reslove horizontal scrolling

--- a/src/modules/main/modifications_Mx210/style/modifications_mx210.module.scss
+++ b/src/modules/main/modifications_Mx210/style/modifications_mx210.module.scss
@@ -110,6 +110,20 @@
 
 }
 
+@media screen and (max-width: 1230px) {
+
+
+    
+.moidificationBlock__listModifications {
+
+    padding-left: 24px;
+    padding-right: 24px;
+
+
+}
+
+}
+
 
 @media screen and (max-width: 1200px) {
 
@@ -235,3 +249,17 @@
 //     }
 
 // }
+
+@media screen and (max-width: 400px) {
+
+
+    
+    .moidificationBlock__listModifications {
+    
+        padding-left: 0px;
+        padding-right: 0px;
+    
+    
+    }
+    
+    }
