--- a/src/ui/modification-card/style/modificationCard.module.scss
+++ b/src/ui/modification-card/style/modificationCard.module.scss
@@ -133,6 +133,12 @@
 
     }
 
+
+    .modificationCardBlock :nth-child(4) {
+      
+    font-size: 12px;
+    }
+
 }
 
 @media screen and (max-width: 290px) {
@@ -154,3 +160,4 @@
     }
 
 }
+
