--- a/src/ui/shopping-cart/style/shopping-cart.module.scss
+++ b/src/ui/shopping-cart/style/shopping-cart.module.scss
@@ -5,7 +5,7 @@
     max-width: 750px;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255);
     justify-content: center;
     position: fixed;
     top: 80px;
